Better persisting of user session after reloads
 - New ApiAuthToken handler to refresh the user's token
 - On page load refresh a user's token if not expired
 - Handling of refresh client side routes from fiber server
 - Better handling of 'panic' situations if something crashes server
   side
 - Better running production setup for docker vs. deployment
